# sparv-sbx-corpus-statistics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  rolling.yml  scheduled.yml  test.yml
assets/: all_stats.json  freqs.json  pos_lemma_freqs_flat.json  pos_suc_feats_freqs_flat.json  pos_token_freqs.json  pos_ufeats_freqs_flat.json  stat_highlights_en_segreg-rd-bet.gold.md  stat_highlights_sv_segreg-rd-bet.gold.md  ufeat_pos_freqs_flat.json
assets/ci/: swener.patch
assets/metadata/: .gitignore  config.yaml
assets/small/: stat_highlights_en_small.gold.md  stat_highlights_sv_small.gold.md
examples/rd-segreg/: config.yaml
examples/rd-segreg/segreg-rd-bet/: config.yaml
examples/small/: config.yaml
examples/small/source/: bet-2018-2021-1-short.xml
src/sbx_corpus_statistics/: __init__.py  exporters.py  metadata.yaml  suc_msd.py
src/sparv_statistics/: __init__.py  exporters.py  formatting.py  metadata.yaml  suc_msd.py
tests/: conftest.py  test_exporters.py  test_formatting.py  test_suc_msd.py
tests/__snapshots__/: test_exporters.ambr  test_formatting.ambr  test_suc_msd.ambr
